--- a/svg/src/config/standard.yaml
+++ b/svg/src/config/standard.yaml
@@ -9,7 +9,7 @@
 # -----------------------------------------------------------------------------
 llm:
   # 后端类型：openrouter | dashscope | openai
-  backend: "dashscope"
+  backend: "openrouter"
 
   # --- OpenRouter 配置 ---
   openrouter:
