--- a/svg/pyproject.toml
+++ b/svg/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "python-docx>=1.1.0",
     "pyyaml>=6.0.2",
     "jinja2>=3.1.0",
+    "python-dotenv>=1.2.1",
 ]
 
 [project.optional-dependencies]
@@ -34,3 +35,6 @@ ignore = ["E501"]
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
+
+[tool.hatch.build.targets.wheel]
+packages = ["src"]
