--- a/svg/src/config/standard.yaml
+++ b/svg/src/config/standard.yaml
@@ -16,7 +16,8 @@ llm:
     base_url: "https://openrouter.ai/api/v1"
     # 密钥从环境变量 OPENROUTER_API_KEY 读取（留空则使用环境变量）
     api_key_env: "OPENROUTER_API_KEY"
-    model: "anthropic/claude-3.5-sonnet"
+    model: "anthropic/claude-3.5-sonnet" 
+    # model: "moonshotai/kimi-k2.5" 
     temperature: 0.3
     max_tokens: 4096
 
